<resources>
    <string name="app_name">Canine Caboodle</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Next</string>

    <string name="hello_first_fragment">Welcome to Canine Caboodle</string>
    <string name="hello_second_fragment">Select your buddy!</string>
    <string name="german_shepherd">German Shepherd</string>
    <string name="yorkshire_terrier">Yorkshire Terrier</string>
    <string name="labrador">Labrador</string>
    <string name="golden_doodle">Golden Doodle</string>
    <string name="image_of_dog_1">Image of Dog 1</string>
    <string name="settings">Settings</string>
    <string name="journal">Journal</string>
    <string name="image_of_dog_2">Image of Dog 2</string>
</resources>