<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/breed"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="#fff"
        android:contentDescription="@string/german_shepherd"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/german_shepherd"
        android:title="@string/german_shepherd"
        app:layout_constraintBottom_toTopOf="@+id/breed7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/breed5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/breed5"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="#fff"
        android:contentDescription="@string/yorkshire_terrier"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/yorkshire_terrier_"
        android:title="@string/yorkshire_terrier"
        app:layout_constraintBottom_toTopOf="@+id/breed6"
        app:layout_constraintEnd_toStartOf="@+id/breed"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/breed7"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="#fff"
        android:contentDescription="@string/labrador"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/labrador_"
        android:title="@string/labrador"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/breed6"
        app:layout_constraintTop_toBottomOf="@+id/breed"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/breed6"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:background="#fff"
        android:contentDescription="@string/golden_doodle"
        android:padding="20dp"
        android:scaleType="fitCenter"
        android:src="@drawable/golden_doodle"
        android:title="@string/golden_doodle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/breed7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breed5"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>